--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,3 +12,8 @@ fdfs:
   so-timeout: 3000
   tracker-list:
     - 119.23.38.106:22122
+server:
+  port: 8081
+  servlet: 
+    context-path: /image
+
