--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,6 +14,7 @@ fdfs:
     - 119.23.38.106:22122
 server:
   port: 8081
-  servlet: 
-    context-path: /image
 
+
+image:
+  host: http://sp.goodboybighsnsd3e.com/
