--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.51well.image</groupId>
-    <artifactId>51well-image</artifactId>
+    <artifactId>image-upload</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>51well-image</name>
-    <description>Demo project for Spring Boot</description>
+    <name>image-upload</name>
+    <description>图片上传 与删除</description>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
